--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
             <button onclick="verifyAdmin()">Login</button>
             <p id="error-message" class="error hidden">Incorrect password!</p>
         </div>
+        <button id="backButtonLogin" onclick="goBack()">Back</button>
     </div>
     <p class="tagline">At PinShoppe, we turn your personality into a pin! 🎨✨ Whether you’re rocking a fandom, repping your squad, or just flexing your creativity, our high-quality custom and pre-made pin badges let you express yourself in style. From sleek minimalist designs to eye-catching custom artworks, we bring your ideas to life—one pin at a time. 🛍️💖 Get yours today and pin your story to the world!</p>
 
@@ -216,6 +217,7 @@
         </div>
         
         <button id="clearBtn" class="hidden" onclick="clearBookings()">Clear All</button>
+        <button id="backButtonMain" onclick="goBack()">Back</button>
     </div>
 
     <!-- Modal -->
@@ -302,9 +304,11 @@
         }
 
         // Back button functionality
-        document.getElementById("backButton").addEventListener("click", function() {
+        function goBack() {
             window.history.back();
-        });
+        }
+
+        document.getElementById("backButton").addEventListener("click", goBack);
 
         // Modal functionality
         document.getElementById("bookingForm").addEventListener("submit", function(event) {
